--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firedart: ^0.9.7
+  file_picker: ^6.1.1
+  firebase_storage: ^11.6.0
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
